# Optibits

./: .gitignore  CMakeLists.txt  Optibits.kdev4  README.md  docConf
.ccls-cache/@home@leo@git@Optibits/: src@UtilityWin.cpp.blob
.kdev4/: Optibits.kdev4
cmake/: Config.cmake.in
docs/: Bitmap_8hpp_source.html  Buffer_8hpp_source.html  Drawable_8hpp_source.html  Fwd_8hpp_source.html  GraphicsImpl_8hpp_source.html  Graphics_8hpp_source.html  Http_8hpp_source.html  Keyboard_8hpp_source.html  Math_8hpp_source.html  OptiWindow_8hpp_source.html  Optibits.dio  Platform_8hpp_source.html  TexChunk_8hpp_source.html  Timing_8hpp_source.html  annotated.html  classOptibits_1_1BinPacker-members.html  classOptibits_1_1Bitmap.html  classOptibits_1_1Buffer-members.html  classOptibits_1_1Channel-members.html  classOptibits_1_1Channel.html  classOptibits_1_1ClipRectStack.html  classOptibits_1_1Drawable.html  classOptibits_1_1Input-members.html  classOptibits_1_1Noncopyable-members.html  classOptibits_1_1Noncopyable.html  classOptibits_1_1OpenGLContext-members.html  classOptibits_1_1OptiWindow.html  classOptibits_1_1Viewport-members.html  classUtilityTests.html  classes.html  dir_014e9904b73e6b6fd3cd03d9f75db34c.html  dir_298c6ae5d6c2030071f2e35f00e7a64c.html  dir_2ab8949851f90266814c92ca8d40b9e8.html  dir_545f0f64f76554b7d231553d199ef1ba.html  dir_5ccf6f5f6f8f5a0c68d52188c0c1e2bd.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_c94e24943e5761a883e24ac11500f1f5.html  dir_d2fa2b2555297cef0409a5f58b48c5d5.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e05d7e2b1ecd646af5bb94391405f3b5.html  (+9 more)
docs/search/: all_0.js  all_3.js  all_5.js  all_c.js  classes_1.js  classes_7.js  classes_8.js  classes_d.js  functions_2.js
html/: AABB_8hpp_source.html  AudioImpl_8hpp_source.html  Audio_8hpp_source.html  BinPacker_8hpp_source.html  ClipRectStack_8hpp_source.html  Color_8hpp_source.html  Directories_8hpp_source.html  Exception_8hpp_source.html  GLContext_8hpp_source.html  GraphicsBase_8hpp_source.html  Input_8hpp_source.html  Optibits_8hpp_source.html  SDL_8h.html  SDL_8h_source.html  SDL__assert_8h_source.html  SDL__atomic_8h.html  SDL__atomic_8h_source.html  SDL__audio_8h.html  SDL__audio_8h_source.html  SDL__bits_8h.html  SDL__bits_8h_source.html  SDL__blendmode_8h.html  SDL__blendmode_8h_source.html  SDL__clipboard_8h.html  SDL__clipboard_8h_source.html  SDL__config_8h_source.html  SDL__cpuinfo_8h.html  SDL__cpuinfo_8h_source.html  SDL__egl_8h.html  SDL__egl_8h_source.html  SDL__endian_8h.html  SDL__endian_8h_source.html  SDL__error_8h.html  SDL__error_8h_source.html  SDL__events_8h.html  SDL__events_8h_source.html  SDL__filesystem_8h.html  SDL__filesystem_8h_source.html  SDL__gamecontroller_8h.html  SDL__gamecontroller_8h_source.html  (+779 more)
html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_8.js  all_a.js  all_e.js  all_f.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_3.js  classes_4.js  classes_6.js  classes_9.js  classes_a.js  classes_b.js  classes_e.js  classes_f.js  defines_1.js  defines_3.js  defines_4.js  enums_0.js  enums_1.js  enumvalues_0.js  files_2.js  functions_0.js  (+26 more)
src/: AudioImpl.cpp  BinPacker.cpp  Bitmap.cpp  Buffer.cpp  ClipRectStack.cpp  Color.cpp  Directories.cpp  GLContext.cpp  Input.cpp  Math.cpp  OptiWindow.cpp  Resolution.cpp  Texture.cpp  TimingApple.cpp  TimingUnix.cpp  TimingWin.cpp  Utility.cpp  UtilityWin.cpp  Version.cpp  Window.cpp
test/: BufferTests.cpp  CMakeLists.txt  InputTests.cpp  UtilityTests.cpp
(+31 files in other folders)
